--- a/index.html
+++ b/index.html
@@ -124,25 +124,33 @@ var filedates =  ['2016-03-03', '2016-03-04', '2016-03-05', '2016-03-06', '2016-
         .attr("height", "100%")
         .attr("fill", "#29293d")
 
+    var drag = d3.behavior.drag()
+        .on("drag", function(d,i) {
+            var val = d3.select("#slider").attr("value");
+            init(filedates[this.value]);
+            // d.x += d3.event.dx
+            // d.y += d3.event.dy
+            // d3.select(this).attr("transform", function(d,i){
+            //     return "translate(" + [ d.x,d.y ] + ")"
+            // })
+        });
+
     d3.select("#slider")
         .attr("max",totalDays-1)
-        .on('change', function(d) {
-              console.log(filedates[this.value]);
-    })
-    .on('input', function(d) {
-          console.log(filedates[this.value]);
-          init(filedates[this.value]);
-});
+        .on('input', function(d) {
+         // console.log(filedates[this.value]);
+         d3.select(this).attr("value", filedates[this.value]);
+          //init(filedates[this.value]);
+      })
+      .call(drag);
 
     var file = "map/" +date + ".json";
 
     d3.json(file, function(json){
 
-        console.log(json);
         var data = json;
-        console.log("data:" , data);
         var defaultGif = data[data.findIndex(x=>x.stateName=="XX")].trendMapped;
-        console.log(defaultGif);
+
 
         var bg = svg.append("g")
             .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")")
