--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ CA UT CO NE MO KY WV VA MD DE
          OK LA MS AL GA
 HI AK    TX             FL
 </script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
 function init(date){
