--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ CA UT CO NE MO KY WV VA MD DE
 HI AK    TX             FL
 </script>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 
 <script src="main.js"></script>
 <script src="slider.js"></script>
