--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 
-<div id="main"><svg width="1200" height="800"></svg></div>
+<div id="main"></div>
+<div id="slide"></div>
+
 
 <script id="grid" type="text/plain">
 XX                            ME
