--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 
-<div id="main"></div>
-<div id="slide"></div>
-
+<div id="main"><svg width="1200" height="800"></svg></div>
 
 <script id="grid" type="text/plain">
 XX                            ME
@@ -20,7 +18,7 @@ CA UT CO NE MO KY WV VA MD DE
 HI AK    TX             FL
 </script>
 
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script src="main.js"></script>
 <script src="slider.js"></script>
