--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<div id="main"><svg width="1200" height="800"></svg></div>
+<div align = "center" id="main"></div>
+<div align = "center" id="slider"></div>
 
 <script id="grid" type="text/plain">
 XX                            ME
