--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@ HI AK    TX             FL
 <script src="https://d3js.org/d3.v3.min.js"></script>
 
 <script src="main.js"></script>
-<script src="slider.js"></script>
+<!-- <script src="slider.js"></script> -->
 </body>
